k8s/asthma/dev/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-asthma-dev
  name: redis-asthma-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-asthma-dev
  strategy:
    type: Recreate      
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: redis-asthma-dev
    spec:
      containers:
        - image: redis:6.2
          name: trapi-v1-asthma-dev-cache
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: asthma-redis-data  
          resources: 
            requests:
              memory: 8Gi
              cpu: "1"
            limits:
              memory: "10Gi"
              cpu: "2"          
          livenessProbe:
            periodSeconds: 5
            exec:
              command: ["redis-cli", "ping"]
          startupProbe:
            exec:
              command: ["redis-cli", "ping"]      
            failureThreshold: 30
            periodSeconds: 5    
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["redis-cli", "ping"]    
      restartPolicy: Always
      volumes:
        - name: asthma-redis-data
          persistentVolumeClaim:
            claimName: asthma-redis-db-pvc
