k8s/asthma/dev/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: server-asthma-dev
  name: server-asthma-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server-asthma-dev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: server-asthma-dev
    spec:
      containers:
        - image: renci/icees-api-server:0.5.0
          name: trapi-v1-asthma-dev-server
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: iceesdata          
              mountPath: /iceesdata
          resources: 
            requests: 
              cpu: "2"
              memory: 10Gi    
            limits:
              memory: "16Gi"
              cpu: "4"   
              
      restartPolicy: Always
      volumes:
        - name: iceesdata
          persistentVolumeClaim:
            claimName: iceesdata
